[metadata]
name = rfaparse
version = 0.1.1
author = Keyfox
author_email = dev.keyfox@gmail.com
description = Ring Fit Adventure screen parser
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/keyfox/rfaparse

[options]
packages = find:
python_requires = ~=3.7
install_requires =
  google-cloud-vision==2.*
  Pillow==8.*

[options.entry_points]
console_scripts =
  rfaparse = rfaparse.__main__:main
